<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.pjatk.bmi.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="edu.pjatk.bmi.ui.bmi.BmiFragment"
        android:label="@string/title_bmi"
        tools:layout="@layout/fragment_bmi_calculator" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="edu.pjatk.bmi.ui.dailyCaloricRequirement.DailyCaloricRequirementFragment"
        android:label="@string/title_daily_caloric_requirement"
        tools:layout="@layout/fragment_daily_caloric_requirement" />
    <fragment
        android:id="@+id/nav_shopping_list"
        android:name="edu.pjatk.bmi.ui.shoppingList.ShoppingListFragment"
        android:label="@string/shopping_list"
        tools:layout="@layout/fragment_shopping_list" />
    <fragment
        android:id="@+id/nav_bmi_chart"
        android:name="edu.pjatk.bmi.ui.chart.BmiChartFragment"
        android:label="Wykres BMI"
        tools:layout="@layout/fragment_bmi_chart" />
</navigation>